[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
thiserror = "*"
error-chain = "0.12.4"
anyhow = "1.0"
thread_local = "1.1"
num_cpus = "1.16.0"
num_threads = "*"
thread-amount = "0.1.3"
thread-control = "0.1.2"
thread-priority = "1.1.0"
crossbeam = "0.8.4"
rayon = "1.10.0"
send_wrapper = "0.6.0"
